testcrate/ui/move-captured-variable.stderr
warning: use of deprecated item 'futures': `futures-await` has been merged into the main `futures` repository, please switch to depending directly on `futures` with the `nightly` feature activated
 --> $DIR/move-captured-variable.rs:3:1
  |
3 | extern crate futures_await as futures;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: #[warn(deprecated)] on by default

error[E0507]: cannot move out of captured outer variable in an `FnMut` closure
  --> $DIR/move-captured-variable.rs:12:9
   |
10 |       let a = String::new();
   |           - captured outer variable
11 |       foo(|| {
12 | /         async_block! {
13 | |             Ok::<String, i32>(a)
14 | |         };
   | |__________^ cannot move out of captured outer variable in an `FnMut` closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
